force-app/main/default/objects/CTRRequestFormHeader__c.object
<CustomObject>
    <fields>
        <fullName>AccigClerk__c</fullName>
        <label>Accig Clerk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountAssignmentGroup__c</fullName>
        <label>Account Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 Domestic Revenues</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 Foreign Revenues</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 Affiliate Comp Revenues</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountGroup__c</fullName>
        <label>Account Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccountGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgreeToCookiePolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreeToCookiePolicy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreeToPrivacyPolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreeToPrivacyPolicy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP001 - ABS</fullName>
                </value>
                <value>
                    <fullName>AP002 - Adhesive</fullName>
                </value>
                <value>
                    <fullName>AP003 - Adhesive for footwear</fullName>
                </value>
                <value>
                    <fullName>AP004 - Adhesive tape</fullName>
                </value>
                <value>
                    <fullName>AP005 – Aerosal paint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovedChangeCounterparty__c</fullName>
        <label>ApprovedChangeCounterparty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Waiting to inform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automaticpurchaseorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic purchase  order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuildingCodeLocal__c</fullName>
        <label>Building Code (Local)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEOFirstName__c</fullName>
        <label>CEO First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEOLastName__c</fullName>
        <label>CEO Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR User</label>
        <referenceTo>CTRUser__c</referenceTo>
        <relationshipLabel>CTR Request Form Header</relationshipLabel>
        <relationshipName>CTRRequestFormHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CanEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashManagementGroup__c</fullName>
        <label>Cash Management Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO Lr-Feedstack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CashMgmntGroupDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Mgmnt Group(Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chkdoubleinv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chk double inv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CityStateENText__c</fullName>
        <label>CityStateENText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityStateEN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CityStateEN</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Province</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header (CityStateEN)</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CityStateLocalDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City (Eng) (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CityStateLocalText__c</fullName>
        <label>City/State (Local)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityStateLocal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City/State (Local)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Province</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoName__c</fullName>
        <label>C/O Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyHaveAnyTargetsInsaction__c</fullName>
        <label>Company have any targets insaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyHaveAnyTargetsInsactionsDesc__c</fullName>
        <label>Company have any targets insactions desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyLatestCreditRating__c</fullName>
        <description>Company&apos;s latest credit rating by international agencies: (Please specify if any e.g.BBB,Baa2)</description>
        <label>Company&apos;s latest credit rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyNameENF__c</fullName>
        <label>Company Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyNameLocal__c</fullName>
        <label>Company Name (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyPurchasingVolumnperGrade__c</fullName>
        <description>Please estimate the company purchasing volumn per grade per month</description>
        <label>Company Purchasing Volumn per Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyWebsite__c</fullName>
        <label>Company Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactSalutation__c</fullName>
        <label>Contact Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Salutation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorporateGovernancePolicy__c</fullName>
        <label>Corporate Governance policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TH</fullName>
                    <label>+66 Thailand</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryDatanotCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country (Data not Correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Country</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header (Country)</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditControlArea__c</fullName>
        <label>Credit Control Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                    <label>2000 Credit Control Area TS</label>
                </value>
                <value>
                    <fullName>20ZC</fullName>
                    <label>20ZC Credit Control Area TS (ZC)</label>
                </value>
                <value>
                    <fullName>9100</fullName>
                    <label>9100 Credit Control Area TSV</label>
                </value>
                <value>
                    <fullName>91ZC</fullName>
                    <label>91ZC Credit Control Area TSV (ZC)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGroup__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CG001 - ALCAN Group</fullName>
                </value>
                <value>
                    <fullName>CG002 - BAFS</fullName>
                </value>
                <value>
                    <fullName>CG003 - BRIDGESTONE Group</fullName>
                </value>
                <value>
                    <fullName>CG004 - CAP</fullName>
                </value>
                <value>
                    <fullName>CG005 - Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerNameEN1Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name ENG (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerNameEN1__c</fullName>
        <label>CustomerNameEN1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNameEN2__c</fullName>
        <label>CustomerNameEN2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNameLocal1__c</fullName>
        <label>CustomerNameLocal1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNameLocal2__c</fullName>
        <label>CustomerNameLocal2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNameLocalDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerOtherProducts__c</fullName>
        <label>Other Products (Customer)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPricingProcedure__c</fullName>
        <label>Customer Pricing Procedure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerProductIdentification__c</fullName>
        <label>Customer Product Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPurchaseProductFrom__c</fullName>
        <label>Customer Purchase Product From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSearchTermEN__c</fullName>
        <label>Customer Search Term (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSearchTermLocal__c</fullName>
        <label>Customer Search Term(Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSource__c</fullName>
        <formula>TEXT(Customer__r.AccountSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerStatisticsGroup__c</fullName>
        <label>Customer Statistics Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTypeSAP__c</fullName>
        <label>Customer Type (SAP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M0</fullName>
                    <label>M0 : Customer Non-Section - ผู้ค้ามาตราอื่นๆ</label>
                </value>
                <value>
                    <fullName>M1</fullName>
                    <label>M1 : Customer Section. 7 - ผู้ค้ามาตรา 7</label>
                </value>
                <value>
                    <fullName>M2</fullName>
                    <label>M2 : Customer Section. 7 and 7 Special - ผู้ค้ามาตรา 7 และผู้ค้ามาตรา 7 พิเศษ</label>
                </value>
                <value>
                    <fullName>M3</fullName>
                    <label>M3 : Customer Section. 10 - ผู้ค้ามาตรา 10</label>
                </value>
                <value>
                    <fullName>M4</fullName>
                    <label>M4 : Customer Section. 11 - ผู้ค้ามาตรา 11</label>
                </value>
                <value>
                    <fullName>M5</fullName>
                    <label>M5 : Carrier Section. 12 - ผู้ค้ามาตรา 12</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>End Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Request_Form_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomersFacilityTankAndStorage__c</fullName>
        <label>Customer&apos;s Facility (Tank and Storage)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FacilityTankAndStorage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomersFacilityTransportation__c</fullName>
        <label>Customer&apos;s Facility (Transportation)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FacilityTransportation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryPlant__c</fullName>
        <label>Delivery Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryPriority__c</fullName>
        <label>Delivery Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>16 Domestic - TS/TSV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistrictENText__c</fullName>
        <label>DistrictENText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictLocalText__c</fullName>
        <label>District (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentSubmittedDateTime__c</fullName>
        <label>Document Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnvironmentPolicy__c</fullName>
        <label>Environment policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedMonthlyPurchaseQuantity__c</fullName>
        <label>Estimated monthly purchase quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedMonthlyPurchaseUnit__c</fullName>
        <label>Estimated monthly purchase unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BBL</fullName>
                    <label>Barrels (BBL)</label>
                </value>
                <value>
                    <fullName>KG</fullName>
                    <label>Kilogram (KG)</label>
                </value>
                <value>
                    <fullName>KT</fullName>
                    <label>Kilotonne (KT)</label>
                </value>
                <value>
                    <fullName>MT</fullName>
                    <label>Metric Tone (MT)</label>
                </value>
                <value>
                    <fullName>GAL</fullName>
                    <label>US gallon (GAL)</label>
                </value>
                <value>
                    <fullName>TON</fullName>
                    <label>US Ton (TON)</label>
                </value>
                <value>
                    <fullName>EA</fullName>
                    <label>Each (EA)</label>
                </value>
                <value>
                    <fullName>DR</fullName>
                    <label>Drum</label>
                </value>
                <value>
                    <fullName>L30</fullName>
                    <label>Liter at temp. 30 degree (L30)</label>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>Pcs</fullName>
                    <isActive>false</isActive>
                    <label>Pcs</label>
                </value>
                <value>
                    <fullName>Unit</fullName>
                    <isActive>false</isActive>
                    <label>Unit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExchangeRateType__c</fullName>
        <label>Exchange Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtendHeroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExtendHeroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FacilityTankAndStorage__c</fullName>
        <label>Facility (Tank and Storage)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own storage facility</fullName>
                </value>
                <value>
                    <fullName>Rent storage facility for one-year contract or more</fullName>
                </value>
                <value>
                    <fullName>Rent storage facility less than one-year contract</fullName>
                </value>
                <value>
                    <fullName>No storage facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FacilityTransportation__c</fullName>
        <label>Facility (Transportation)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own transportation</fullName>
                </value>
                <value>
                    <fullName>Rent transportation for one-year contract or more</fullName>
                </value>
                <value>
                    <fullName>Rent transportation less than one-year contract</fullName>
                </value>
                <value>
                    <fullName>No transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FaxCountryCode__c</fullName>
        <label>Fax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCodePhone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FaxExtension__c</fullName>
        <label>Fax Extension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloorLocal__c</fullName>
        <label>Floor (Local)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormerNameofCompany__c</fullName>
        <label>Former Name of Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GatewayID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GroupKeyAccountKeyofBankDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Key (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupKeyAccountKeyofBank__c</fullName>
        <label>Group Key (Account  Key of Bank)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasFailedSupplyInLast3Years__c</fullName>
        <label>Has Failed supply in last 3 years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasIssuesDuringThePast5Years__c</fullName>
        <label>Has Issues during the Past 5 Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasSanctionedTarget__c</fullName>
        <label>Has Sanctioned Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HerokuInitialSecret__c</fullName>
        <label>HerokuInitialSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HousenoLocal__c</fullName>
        <label>House no. (Local)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HumanRightsPolicy__c</fullName>
        <label>Human Rights policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmidiateParentCompany__c</fullName>
        <label>Immediate Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncoperationDate__c</fullName>
        <label>Incoperation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoterms2Port__c</fullName>
        <label>Incoterms 2 (Port)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sriracha, Thailand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NP000</fullName>
                    <label>NP000 : Other - อื่นๆ</label>
                </value>
                <value>
                    <fullName>NP001</fullName>
                    <label>NP001 : Petroleum&amp;Gas Station - สถานีบริการน้ำมันและก๊าซ</label>
                </value>
                <value>
                    <fullName>NP002</fullName>
                    <label>NP002 : Petroleum&amp;Gas Retailer - ร้านค้าน้ำมันและก๊าซ</label>
                </value>
                <value>
                    <fullName>NP003</fullName>
                    <label>NP003 : Transportation - การขนส่ง</label>
                </value>
                <value>
                    <fullName>NP004</fullName>
                    <label>NP004 : Industrial - อุตสาหากรรม</label>
                </value>
                <value>
                    <fullName>NP005</fullName>
                    <label>NP005 : Electricity Generating - การผลิตไฟฟ้า</label>
                </value>
                <value>
                    <fullName>NP006</fullName>
                    <label>NP006 : Goverment Organization - ราชการและรัฐวิสาหกิจ</label>
                </value>
                <value>
                    <fullName>0001</fullName>
                    <isActive>false</isActive>
                    <label>0001</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationEditField__c</fullName>
        <label>Integration Edit Field</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InterGroup__c</fullName>
        <label>Inter Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IG001 - External</fullName>
                </value>
                <value>
                    <fullName>IG002 - JSKEM</fullName>
                </value>
                <value>
                    <fullName>IG003 - LABIX</fullName>
                </value>
                <value>
                    <fullName>IG004 - TET</fullName>
                </value>
                <value>
                    <fullName>IG005 – TLB</fullName>
                </value>
                <value>
                    <fullName>IG006 – TM</fullName>
                </value>
                <value>
                    <fullName>IG007 – TOP</fullName>
                </value>
                <value>
                    <fullName>IG008 – TOP SPP</fullName>
                </value>
                <value>
                    <fullName>IG009 – TPX</fullName>
                </value>
                <value>
                    <fullName>IG010 – TSR</fullName>
                </value>
                <value>
                    <fullName>IG011 – TSTH</fullName>
                </value>
                <value>
                    <fullName>IG012 - TSV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestedProductCustomer__c</fullName>
        <label>InterestedProductCustomer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestedProductSupplier__c</fullName>
        <label>InterestedProductSupplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestedProductTypeAsCustomerTOP__c</fullName>
        <label>Interested Product Type as Customer TOP</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InterestedProductTypeasCustomerTOP</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestedProductTypeAsCustomerTX__c</fullName>
        <label>Interested Product Type as Customer TX</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InterestedProductTypeasCustomerTX</valueSetName>
        </valueSet>
    </fields>
</CustomObject>